add notice to checkout the carpentries blog

--- a/pages/index.html
+++ b/pages/index.html
@@ -31,6 +31,14 @@ excerpt: Teaching researchers the foundational computing skills they need to get
 <div class="row">
   <div class="medium-8 columns">
     <h3>Recent Blog Posts</h3>
+    <p>
+      In addition of the posts below,
+      find out what's happening in our community through
+      <a href="https://carpentries.org/blog">The Carpentries blog</a>,
+      a great resource that collates posts from Data Carpentry,
+      Library Carpentry, and Software Carpentry, and
+      publishes updates of general interest to the community.
+    </p>
     {% include list-posts entries='10' %}
   </div>
   <div class="medium-4 columns">
