--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -66,7 +66,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td>
       <a href="{{site.baseurl}}/team/#devenyi_gabriel">Gabriel Devenyi</a>,
       Colin Morris,
-      <a href="{{site.baseurl}}/team/#pitchers_w">Will Pitchers</a>
+      <a href="{{site.baseurl}}/team/#pitchers_w">Will Pitchers</a>, Gerard Capes
     </td>
   </tr>
 
