include Library Carpentry

--- a/pages/workshops_request.html
+++ b/pages/workshops_request.html
@@ -20,10 +20,10 @@ excerpt: how to request a Software Carpentry workshop at your institution
 </div>
 
 <p>
-  If you would like a Data Carpentry workshop,
-  please <a href="http://www.datacarpentry.org/workshops-host/">visit their web site</a>.
+  You can also request a <a href="http://www.datacarpentry.org/workshops-host/">Data Carpentry</a> or <a href="https://librarycarpentry.org/workshops/">Library Carpentry</a> workshop.  
+  
 </p>
-
+  
 <h3>Expenses and Fees</h3>
 
 <p>
