[fix #1076] fix name of data feed file

--- a/pages/index.html
+++ b/pages/index.html
@@ -44,7 +44,7 @@ excerpt: Teaching researchers the foundational computing skills they need to get
   <div class="medium-4 columns">
     <h3>Upcoming Workshops</h3>
     <table class="table table-striped workshops">
-      {% for w in site.data.SWC_upcoming_workshops_plain %}
+      {% for w in site.data.swc_upcoming_workshops %}
       <tr>
 	<td>
 	  <img src="{{site.filesurl}}/flags/{{site.flag_size}}/{{w.country | downcase}}.png" title="{{w.country | replace: '-', ' '}}" alt="{{w.country | replace: '-', ' ' | downcase}}" />
