change instructor guide >> instructor notes

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -53,7 +53,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <th>Site</th>
     <th>Repository</th>
     <th>Reference</th>
-    <th>Instructor Guide</th>
+    <th>Instructor Notes</th>
     <th>Maintainer(s)</th>
   </tr>
 
@@ -62,7 +62,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/shell-novice" target="_blank" class="icon-browser" title="The Unix Shell"></a></td>
     <td><a href="{{site.github_url}}/shell-novice" target="_blank" class="icon-github" title="The Unix Shell"></a></td>
     <td><a href="{{site.github_io_url}}/shell-novice/reference" target="_blank" class="icon-eye" title="The Unix Shell"></a></td>
-    <td><a href="{{site.github_io_url}}/shell-novice/guide/" target="_bank" class="icon-circle-with-plus" title="The Unix Shell Instructor Guide"></a></td>
+    <td><a href="{{site.github_io_url}}/shell-novice/guide/" target="_bank" class="icon-circle-with-plus" title="The Unix Shell Instructor Notes"></a></td>
     <td>
       <a href="https://carpentries.org/maintainers/#gdevenyi">Gabriel Devenyi</a>,
       Colin Morris,
@@ -75,7 +75,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/git-novice" target="_blank" class="icon-browser" title="Version Control with Git"></a></td>
     <td><a href="{{site.github_url}}/git-novice" target="_blank" class="icon-github" title="Version Control with Git"></a></td>
     <td><a href="{{site.github_io_url}}/git-novice/reference" target="_blank" class="icon-eye" title="Version Control with Git"></a></td>
-    <td><a href="{{site.github_io_url}}/git-novice/guide/" target="_bank" class="icon-circle-with-plus" title="The Git Instructor Guide"></a></td>
+    <td><a href="{{site.github_io_url}}/git-novice/guide/" target="_bank" class="icon-circle-with-plus" title="The Git Instructor Notes"></a></td>
     <td>
       <a href="https://carpentries.org/maintainers/#iglpdc">Ivan Gonzalez</a>,
       Daisie Huang,
@@ -90,7 +90,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/python-novice-inflammation" target="_blank" class="icon-browser" title="Programming with Python"></a></td>
     <td><a href="{{site.github_url}}/python-novice-inflammation" target="_blank" class="icon-github" title="Programming with Python"></a></td>
     <td><a href="{{site.github_io_url}}/python-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with Python"></a></td>
-    <td><a href="{{site.github_io_url}}/python-novice-inflammation/guide/" target="_bank" class="icon-circle-with-plus" title="The Python Inflammation Instructor Guide"></a></td>
+    <td><a href="{{site.github_io_url}}/python-novice-inflammation/guide/" target="_bank" class="icon-circle-with-plus" title="The Python Inflammation Instructor Notes"></a></td>
     <td>
       Trevor Bekolay,
       Valentina Staneva,
@@ -105,7 +105,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
       <td><a href="{{site.github_io_url}}/python-novice-gapminder" target="_blank" class="icon-browser" title="Plotting and Programming in Python"></a></td>
       <td><a href="{{site.github_url}}/python-novice-gapminder" target="_blank" class="icon-github" title="Plotting and Programming in Python"></a></td>
       <td><a href="{{site.github_io_url}}/python-novice-gapminder/reference" target="_blank" class="icon-eye" title="Plotting and Programming in Python"></a></td>
-      <td><a href="{{site.github_io_url}}/python-novice-gapminder/guide/" target="_bank" class="icon-circle-with-plus" title="The Python Gapminder Instructor Guide"></a></td>
+      <td><a href="{{site.github_io_url}}/python-novice-gapminder/guide/" target="_bank" class="icon-circle-with-plus" title="The Python Gapminder Instructor Notes"></a></td>
       <td>
           Nathan Moore,
           <a href="https://carpentries.org/maintainers/#alee">Allen Lee</a>,
@@ -119,7 +119,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/r-novice-inflammation" target="_blank" class="icon-browser" title="Programming with R"></a></td>
     <td><a href="{{site.github_url}}/r-novice-inflammation" target="_blank" class="icon-github" title="Programming with R"></a></td>
     <td><a href="{{site.github_io_url}}/r-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with R"></a></td>
-    <td><a href="{{site.github_io_url}}/r-novice-inflammation/guide/" target="_bank" class="icon-circle-with-plus" title="The R Infammation Instructor Guide"></a></td>
+    <td><a href="{{site.github_io_url}}/r-novice-inflammation/guide/" target="_bank" class="icon-circle-with-plus" title="The R Infammation Instructor Notes"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#chen_daniel">Daniel Chen</a>, 
       <a href="https://carpentries.org/maintainers/#katrinleinweber">Katrin Leinweber</a>, 
@@ -132,7 +132,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/r-novice-gapminder" target="_blank" class="icon-browser" title="R for Reproducible Scientific Analysis"></a></td>
     <td><a href="{{site.github_url}}/r-novice-gapminder" target="_blank" class="icon-github" title="R for Reproducible Scientific Analysis"></a></td>
     <td><a href="{{site.github_io_url}}/r-novice-gapminder/reference" target="_blank" class="icon-eye" title="R for Reproducible Scientific Analysis"></a></td>
-    <td><a href="{{site.github_io_url}}/r-novice-gapminder/guide/" target="_bank" class="icon-circle-with-plus" title="The R Gapminder Instructor Guide"></a></td>
+    <td><a href="{{site.github_io_url}}/r-novice-gapminder/guide/" target="_bank" class="icon-circle-with-plus" title="The R Gapminder Instructor Notes"></a></td>
     <td>
       Thomas Wright,
       <a href="https://carpentries.org/maintainers/#naupaka">Naupaka Zimmerman</a>,
@@ -158,7 +158,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <th>Site</th>
     <th>Repository</th>
     <th>Reference</th>
-    <th>Instructor Guide</th>
+    <th>Instructor Notes</th>
     <th>Maintainer(s)</th>
   </tr>
   
@@ -167,7 +167,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/shell-novice-es" target="_blank" class="icon-browser" title="La Terminal de Unix"></a></td>
     <td><a href="{{site.github_url}}/shell-novice-es" target="_blank" class="icon-github" title="La Terminal de Unix"></a></td>
     <td><a href="{{site.github_io_url}}/shell-novice-es/reference" target="_blank" class="icon-eye" title="The Unix Shell"></a></td>
-    <td><a href="{{site.github_io_url}}/shell-novice-es/guide/" target="_bank" class="icon-circle-with-plus" title="La Terminal de Unix Instructor Guide"></a></td>
+    <td><a href="{{site.github_io_url}}/shell-novice-es/guide/" target="_bank" class="icon-circle-with-plus" title="La Terminal de Unix Instructor Notes"></a></td>
     <td>
       <a href="https://carpentries.org/maintainers/#iglpdc">Ivan Gonzalez</a>,
       Clara Llebot, 
@@ -182,7 +182,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/git-novice-es" target="_blank" class="icon-browser" title="Control de versiones con Git"></a></td>
     <td><a href="{{site.github_url}}/git-novice-es" target="_blank" class="icon-github" title="Control de versiones con Git"></a></td>
     <td><a href="{{site.github_io_url}}/git-novice-es/reference" target="_blank" class="icon-eye" title="Control de versiones con Git"></a></td>
-    <td><a href="{{site.github_io_url}}/git-novice-es/guide/" target="_bank" class="icon-circle-with-plus" title="La Terminal de Unix Instructor Guide"></a></td>
+    <td><a href="{{site.github_io_url}}/git-novice-es/guide/" target="_bank" class="icon-circle-with-plus" title="La Terminal de Unix Instructor Notes"></a></td>
     <td>
        <a href="https://carpentries.org/maintainers/#iglpdc">Ivan Gonzalez</a>,
       <a href="https://carpentries.org/maintainers/#raynamharris">Rayna Harris</a>,
@@ -195,7 +195,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
       <td><a href="{{site.github_io_url}}/r-novice-gapminder-es" target="_blank" class="icon-browser" title="R para Análisis Científicos Reproducibles"></a></td>
       <td><a href="{{site.github_url}}/r-novice-gapminder-es" target="_blank" class="icon-github" title="R para Análisis Científicos Reproducibles"></a></td>
       <td><a href="{{site.github_io_url}}/r-novice-gapminder-es/reference" target="_blank" class="icon-eye" title="R para Análisis Científicos Reproducibles Reference"></a></td>
-      <td><a href="{{site.github_io_url}}/r-novice-gapminder-es/guide/" target="_bank" class="icon-circle-with-plus" title="R para Análisis Científicos Reproducibles Instructor Guide"></a></td>
+      <td><a href="{{site.github_io_url}}/r-novice-gapminder-es/guide/" target="_bank" class="icon-circle-with-plus" title="R para Análisis Científicos Reproducibles Instructor Notes"></a></td>
       <td>
           <a href="https://carpentries.org/maintainers/#raynamharris">Rayna Harris</a>,
           Verónica Jiménez, 
@@ -226,7 +226,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <th>Site</th>
     <th>Repository</th>
     <th>Reference</th>
-    <th>Instructor Guide</th>
+    <th>Instructor Notes</th>
     <th>Maintainer(s)</th>
   </tr>
 
@@ -235,7 +235,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/make-novice" target="_blank" class="icon-browser" title="Automation and Make"></a></td>
     <td><a href="{{site.github_url}}/make-novice" target="_blank" class="icon-github" title="Automation and Make"></a></td>
     <td><a href="{{site.github_io_url}}/make-novice/reference" target="_blank" class="icon-eye" title="Automation and Make"></a></td>
-    <td><a href="{{site.github_io_url}}/make-novice/guide/" target="_bank" class="icon-circle-with-plus" title="The Make Instructor Guide"></a></td>
+    <td><a href="{{site.github_io_url}}/make-novice/guide/" target="_bank" class="icon-circle-with-plus" title="The Make Instructor Notes"></a></td>
     <td>
       <a href="https://carpentries.org/maintainers/#gcapes">Gerard Capes</a>
     </td>
@@ -246,7 +246,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/matlab-novice-inflammation" target="_blank" class="icon-browser" title="Programming with MATLAB"></a></td>
     <td><a href="{{site.github_url}}/matlab-novice-inflammation" target="_blank" class="icon-github" title="Programming with MATLAB"></a></td>
     <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with MATLAB"></a></td>
-    <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/guide/" target="_bank" class="icon-circle-with-plus" title="The Matlab Instructor Guide"></a></td>
+    <td><a href="{{site.github_io_url}}/matlab-novice-inflammation/guide/" target="_bank" class="icon-circle-with-plus" title="The Matlab Instructor Notes"></a></td>
     <td>
       <a href="https://carpentries.org/maintainers/#gcapes">Gerard Capes</a>
     </td>
@@ -257,7 +257,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/sql-novice-survey" target="_blank" class="icon-browser" title="Using Databases and SQL"></a></td>
     <td><a href="{{site.github_url}}/sql-novice-survey" target="_blank" class="icon-github" title="Using Databases and SQL"></a></td>
     <td><a href="{{site.github_io_url}}/sql-novice-survey/reference" target="_blank" class="icon-eye" title="Using Databases and SQL"></a></td>
-    <td><a href="{{site.github_io_url}}/sql-novice-survey/guide/" target="_bank" class="icon-circle-with-plus" title="The SQL Survey Instructor Guide"></a></td>
+    <td><a href="{{site.github_io_url}}/sql-novice-survey/guide/" target="_bank" class="icon-circle-with-plus" title="The SQL Survey Instructor Notes"></a></td>
     <td>
       Abigail Cabunoc Mayes, 
       Sam Hames, 
@@ -270,7 +270,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/hg-novice" target="_blank" class="icon-browser" title="Version Control with Mercurial"></a></td>
     <td><a href="{{site.github_url}}/hg-novice" target="_blank" class="icon-github" title="Version Control with Mercurial"></a></td>
     <td><a href="{{site.github_io_url}}/hg-novice/reference" target="_blank" class="icon-eye" title="Version Control with Mercurial"></a></td>
-    <td><a href="{{site.github_io_url}}/hg-novice/guide/" target="_bank" class="icon-circle-with-plus" title="The Mercurial Instructor Guide"></a></td>
+    <td><a href="{{site.github_io_url}}/hg-novice/guide/" target="_bank" class="icon-circle-with-plus" title="The Mercurial Instructor Notes"></a></td>
     <td>
       Doug Latornell
     </td>
