add link to LC lessons

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -13,7 +13,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 </p>
 
 <p>
-  You may also enjoy <a href="http://www.datacarpentry.org/lessons/">Data Carpentry's lessons</a> (which focus on data organization, cleanup, analysis, and visualization) and Library Carpentry's lessons (which apply concepts software development and data science to library contexts).
+  You may also enjoy <a href="http://www.datacarpentry.org/lessons/">Data Carpentry's lessons</a> (which focus on data organization, cleanup, analysis, and visualization) and <a href="https://librarycarpentry.org/lessons/">Library Carpentry's lessons</a> (which apply concepts software development and data science to library contexts).
 </p>
 
 <p>
