--- a/pages/faq.html
+++ b/pages/faq.html
@@ -7,7 +7,7 @@ redirect_from:
 excerpt: Find answers to questions
 ---
 
-Most questions can be answered by [The Carpentries website](https://carpentries.org/) or 
-by the [Carpentries Handbook](https://docs.carpentries.org/). Please [contact us](https://carpentries.org/contact/) if you cannot 
+Most questions can be answered by <a href="https://carpentries.org/">The Carpentries website</a> or 
+by the <a href="https://docs.carpentries.org/">Carpentries Handbook</a>. Please <a href="https://carpentries.org/contact/">contact us</a> if you cannot 
 find the information you need. 
 
