--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -70,7 +70,7 @@ excerpt: definition of a Software Carpentry workshop
   <h2>Future Workshops</h2>
   <p>For more information about any workshop below, please contact the person listed on that workshop's webpage.  For all general inquiries please <a href="mailto:{{site.contact}}">email us</a>.</p>
   <table class="table table-striped workshops" style="width: 100%">
-    {% for w in site.data.SWC_upcoming_workshops_plain %}
+    {% for w in site.data.swc_upcoming_workshops %}
     <tr>
       <td><img src="{{site.filesurl}}/flags/{{site.flag_size}}/{{w.country | downcase}}.png" title="{{w.country | replace: '-', ' ' | downcase}}" alt="{{w.country | replace: '-', ' ' | downcase}}" /></td>
       <td class="link"><a href="{{w.url}}">{{w.venue}}</a>
