redirect FAQ to handbook

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -5,9 +5,8 @@ title: Frequently Asked Questions
 redirect_from:
   - /faq.html
 excerpt: Find answers to questions
+redirect_to:
+  - https://docs.carpentries.org/
 ---
 
-Most questions can be answered by <a href="https://carpentries.org/">The Carpentries website</a> or 
-by the <a href="https://docs.carpentries.org/">Carpentries Handbook</a>. Please <a href="https://carpentries.org/contact/">contact us</a> if you cannot 
-find the information you need. 
 
