--- a/pages/scf_members.html
+++ b/pages/scf_members.html
@@ -4,6 +4,8 @@ permalink: /scf/members/
 title: Foundation Members
 redirect_from:
   - /scf/members.html
+redirect_to:
+  - https://docs.carpentries.org/topic_folders/governance/bylaws.html#individual-voting-membership
 excerpt: Instructors who are qualified to vote in our elections
 ---
 <p>
