add new maintainer for python lesson

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -95,7 +95,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
       Trevor Bekolay,
       Valentina Staneva,
       <a href="https://carpentries.org/maintainers/#annefou">Anne Fouilloux</a>, 
-      Maxim Belkin, 
+      Maxim Belkin, Lauren Ko,
       <a href="https://carpentries.org/maintainers/#MikeTrizna">Mike Trizna</a>
     </td>
   </tr>
