--- a/pages/index.html
+++ b/pages/index.html
@@ -26,7 +26,7 @@ excerpt: Teaching researchers the foundational computing skills they need to get
       Help us help researchers.
     </p>
   </div>
-</div> //end of row
+</div> <!--end of row-->
 
 <div class="row">
   <div class="medium-8 columns">
@@ -69,4 +69,4 @@ excerpt: Teaching researchers the foundational computing skills they need to get
       </tr>
     </table>
   </div>
-</div>//end of row
+</div><!--end of row-->
