Added a class to an image to make it thumbnail

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@ title: Contact Us
 excerpt: Contact Software Carpentry by email or through Twitter
 ---
 <div align="center">
-  <img src="{{site.filesurl}}/seascape.jpg" alt="seascape" />
+  <img src="{{site.filesurl}}/seascape.jpg" alt="seascape" class="img-thumbnail" />
 </div>
 <p>
   You can reach us by email at <a href="mailto:{{site.contact}}">{{site.contact}}</a>,
@@ -14,11 +14,11 @@ excerpt: Contact Software Carpentry by email or through Twitter
   please contact:
 </p>
 <p>
-  The Carpentries
+  <b>The Carpentries</b>
   <br/>
   c/o Community Initiatives
   <br/>
   354 Pine St. Suite 700
   <br/>
-  San Francisco, CA 94104
+  <i>San Francisco, CA 94104</i>
 </p>
