add new maintainer

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -122,7 +122,8 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/r-novice-inflammation/guide/" target="_bank" class="icon-circle-with-plus" title="The R Infammation Instructor Notes"></a></td>
     <td>
       <a href="https://carpentries.org/maintainers/#katrinleinweber">Katrin Leinweber</a>, 
-      <a href="https://carpentries.org/maintainers/#diyadas">Diya Das</a>
+      <a href="https://carpentries.org/maintainers/#diyadas">Diya Das</a>,
+      Rohit Goswami
     </td>
   </tr>
 
