--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -123,7 +123,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td>
       <a href="https://carpentries.org/maintainers/#katrinleinweber">Katrin Leinweber</a>, 
       <a href="https://carpentries.org/maintainers/#diyadas">Diya Das</a>,
-      Rohit Goswami
+      <a href="https://carpentries.org/maintainers/#HaoZeke">Rohit Goswami</a>
     </td>
   </tr>
 
