correct CI mailing address; fixes #1124

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,7 +18,7 @@ excerpt: Contact Software Carpentry by email or through Twitter
   <br/>
   c/o Community Initiatives
   <br/>
-  354 Pine St. Suite 700
+1000 Broadway, Suite #480
   <br/>
-  <i>San Francisco, CA 94104</i>
+  Oakland, CA 94607
 </p>
