update section on community contributed lessons

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -13,7 +13,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 </p>
 
 <p>
-  You may also enjoy <a href="http://www.datacarpentry.org/lessons/">Data Carpentry's lessons</a> (which focus on data organization, cleanup, analysis, and visualization) and <a href="https://librarycarpentry.org/lessons/">Library Carpentry's lessons</a> (which apply concepts of software development and data science to library contexts).  You can also explore <a href="https://carpentries.org/community-lessons/">The Carpentries Community Developed Lessons</a>.  This includes <a href="https://carpentries.org/community-lessons/#the-carpentries-incubator">The Carpentries Incubator</a> (lessons under development and seeking peer review), and <a href="https://carpentries.org/community-lessons/#the-carpentrieslab">The CarpentriesLab</a> (lessons that have been approved by The Carpentries but are not part of our standard offerings).   
+  You may also enjoy <a href="http://www.datacarpentry.org/lessons/">Data Carpentry's lessons</a> (which focus on data organization, cleanup, analysis, and visualization) and <a href="https://librarycarpentry.org/lessons/">Library Carpentry's lessons</a> (which apply concepts of software development and data science to library contexts).  
 </p>
 
 <p>
@@ -268,33 +268,13 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 </table>
 
 
+<div id="capstones"></div>
+<h2 id="community-lessons">Community Developed Lessons</h2>
 
-<h2 id="capstones">Contributed</h2>
+
 <p>
-  These are Carpentries style lessons that have been contributed by community members and are not part of Software Carpentry's official offerings.  If you have a lesson to include here, please <a href="mailto:{{site.contact}}">contact us</a> so we can review your lesson for inclusion here.  To be considered, lessons should use our template, be hosted in an original GitHub repo (not a fork), be offered under an open license, have been taught at least once, and be actively maintained (with at least one lead maintainer).
+The Carpentries also shares <a href="https://carpentries.org/community-lessons/">The Carpentries Community Developed Lessons</a>.  This includes <a href="https://carpentries.org/community-lessons/#the-carpentries-incubator">The Carpentries Incubator</a> (lessons under development and seeking peer review), and <a href="https://carpentries.org/community-lessons/#the-carpentrieslab">The CarpentriesLab</a> (lessons that have been approved by The Carpentries but are not part of our standard offerings).   
 </p>
 
 </p>
-<table class="table table-striped"  style="width: 100%; max-width: 100%">
-  <tr>
-    <th>Lesson</th>
-    <th>Site</th>
-    <th>Repository</th>
-    <th>Maintainer(s)</th>
-  </tr>
 
-  <tr>
-    <td>Testing and Continuous Integration with Python</td>
-    <td><a href="http://katyhuff.github.io/python-testing" target="_blank" class="icon-browser" title="icon-browser"></a></td>
-    <td><a href="https://github.com/katyhuff/python-testing" target="_blank" class="icon-github" title="icon-github"></a></td>
-    <td><a href="https://carpentries.org/maintainers/#katyhuff">Katy Huff</a></td>
-  </tr>
-
-  <tr>
-    <td>Programming with GAP</td>
-    <td><a href="http://alex-konovalov.github.io/gap-lesson" target="_blank" class="icon-browser" title="icon-browser"></a></td>
-    <td><a href="https://github.com/alex-konovalov/gap-lesson" target="_blank" class="icon-github" title="icon-github"></a></td>
-    <td>Alexander Konovalov</td>
-  </tr>
-   
-</table>
