--- a/pages/join_related.html
+++ b/pages/join_related.html
@@ -2,33 +2,5 @@
 layout: page-fullwidth
 permalink: /join/projects/
 title: Related Projects
-excerpt: Our sibling project Data Carpentry develops and teaches workshops on the fundamental data skills needed to conduct research
+redirect_to: https://carpentries.org
 ---
-<div class="row">
-  <div class="medium-4 columns">
-    <img src="{{site.filesurl}}/orgs/data-carpentry-large.png" alt="Data Carpentry" />
-  </div>
-  <div class="medium-8 columns">
-    <p>
-      Our sibling project Data Carpentry develops and teaches workshops on the fundamental data skills needed to conduct research.
-      Its mission is to provide researchers high-quality, domain-specific training covering the full lifecycle of data-driven research.
-      Where Software Carpentry teaches best practices in software development,
-      Data Carpentry's focus is on the introductory computational skills needed for data management and analysis in all domains of research.
-      Its lessons are domain-specific,
-      from life and physical sciences to social and geospatial sciences
-      and build on the existing knowledge of learners to enable them to quickly apply skills learned to their own research.
-      Their target audience is learners who have little to no prior computational experience.
-    </p>
-    <p>Software Carpentry and Data Carpentry have now merged their projects to form The Carpentries, but will continue to main their 
-      separate, individual lesson and workshop identities and development.
-    </p>
-  </div>
-</div>
-
-<div class="row">
-  {% for project in site.data.includes.projects %}
-    <div class="medium-6 columns">{% include {{project}} %}</div>
-    {% cycle '', '</div>' %}
-    {% cycle '', '<div class="row">' %}
-  {% endfor %}
-</div>
