update SQL maintainers

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -259,9 +259,9 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_io_url}}/sql-novice-survey/reference" target="_blank" class="icon-eye" title="Using Databases and SQL"></a></td>
     <td><a href="{{site.github_io_url}}/sql-novice-survey/guide/" target="_bank" class="icon-circle-with-plus" title="The SQL Survey Instructor Notes"></a></td>
     <td>
-      Abigail Cabunoc Mayes, 
-      Sam Hames, 
-      <a href="https://carpentries.org/maintainers/#henrykironde">Henry Senyondo</a>
+      <a href="https://carpentries.org/maintainers/#remram44">Rémi Rampin</a>,
+      <a href="https://carpentries.org/maintainers/#henrykironde">Henry Senyondo</a>,
+      <a href="https://carpentries.org/maintainers/#r4space">Jane Wyngaard</a>
     </td>
   </tr>
 
