fix link to AMY across the website

--- a/pages/workshops_request.html
+++ b/pages/workshops_request.html
@@ -11,7 +11,7 @@ excerpt: how to request a Software Carpentry workshop at your institution
 </p>
 
 <div align="center">
-<a href="https://amy.software-carpentry.org/workshops/swc/request/">
+<a href="https://amy.carpentries.org/workshops/swc/request/">
   <button class="btn">
     Request a Software Carpentry workshop
   </button>
