Removing my name from the Maintainer List
I honestly didn't realize I was still listed as a Maintainer on here.

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -95,8 +95,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
       Trevor Bekolay,
       Valentina Staneva,
       <a href="https://carpentries.org/maintainers/#annefou">Anne Fouilloux</a>, 
-      Maxim Belkin, Lauren Ko,
-      <a href="https://carpentries.org/maintainers/#MikeTrizna">Mike Trizna</a>
+      Maxim Belkin, Lauren Ko
     </td>
   </tr>
 
