create container div for workshop table in index.html

--- a/pages/index.html
+++ b/pages/index.html
@@ -28,7 +28,15 @@ excerpt: Teaching researchers the foundational computing skills they need to get
   </div>
 </div> <!--end of row-->
 
-{% include workshop_table.md %}
+
+<div class="row">
+  <div class="medium-12 columns">
+    <h3>Upcoming Workshops from INCLUDES</h3>
+    {% include workshop_table.md %}
+  </div>
+</div><!--end of row-->
+
+
 
 <div class="row">
   <div class="medium-12 columns">
