move past workshops link from workshops table to index

--- a/pages/index.html
+++ b/pages/index.html
@@ -31,9 +31,15 @@ excerpt: Teaching researchers the foundational computing skills they need to get
 
 <div class="row">
   <div class="medium-12 columns">
-    <h3>Upcoming Workshops from INCLUDES</h3>
+    <h3>Upcoming Workshops</h3>
     {% include workshop_table.md %}
   </div>
+
+    <tr>
+<td>
+  <em><a href="{{site.baseurl}}/workshops/">See our past workshops</a></em>
+</td>
+  </tr>
 </div><!--end of row-->
 
 
