fix link to past workshops

--- a/pages/index.html
+++ b/pages/index.html
@@ -38,7 +38,7 @@ excerpt: Teaching researchers the foundational computing skills they need to get
 
     <tr>
 <td>
-  <em><a href="{{site.baseurl}}/workshops/">See our past workshops</a></em>
+  <em><a href="{{site.baseurl}}/workshops/past/">See our past workshops</a></em>
 </td>
   </tr>
 </div><!--end of row-->
