--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -69,24 +69,16 @@ excerpt: definition of a Software Carpentry workshop
 <div id="future">
   <h2>Future Workshops</h2>
   <p>For more information about any workshop below, please contact the person listed on that workshop's webpage.  For all general inquiries please <a href="mailto:{{site.contact}}">email us</a>.</p>
-  <table class="table table-striped workshops" style="width: 100%">
-    {% for w in site.data.swc_upcoming_workshops %}
-    <tr>
-      <td><img src="{{site.filesurl}}/flags/{{site.flag_size}}/{{w.country | downcase}}.png" title="{{w.country | replace: '-', ' ' | downcase}}" alt="{{w.country | replace: '-', ' ' | downcase}}" /></td>
-      <td class="link"><a href="{{w.url}}">{{w.venue}}</a>
-        {% if w.instructors %}
-          <br/>
-          <b>Instructors:</b> {{ w.instructors | replace: ",", ", "}}
-          {% endif %}
-        {% if w.helpers %}
-          <br/>
-          <b>Helpers:</b> {{ w.helpers  | replace: ",", ", "}}
-        {% endif %}
-      </td>
-      <td class="date">{{w.start_date | date: "%b %-d"}} - {{w.end_date | date: "%b %-d, %Y"}}</td>
-    </tr>
-    {% endfor %}
-  </table>
+
+
+<div class="row">
+  <div class="medium-12 columns">
+    <h3>Past Workshops</h3>
+    {% assign workshop_list = site.data.swc_upcoming_workshops %}
+    {% include workshop_table.md %}
+  </div>
+</div><!--end of row-->
+</div>
 
 
 <div align="center">
