--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -74,7 +74,7 @@ excerpt: definition of a Software Carpentry workshop
 <div class="row">
   <div class="medium-12 columns">
     <h3>Past Workshops</h3>
-    {% assign workshop_list = site.data.swc_upcoming_workshops %}
+    {% assign workshop_list = site.data.all_upcoming_workshops | where_exp: "item", "item.tag_name contains 'SWC'" %}
     {% include workshop_table.md %}
   </div>
 </div><!--end of row-->
