--- a/pages/workshops_past.html
+++ b/pages/workshops_past.html
@@ -9,11 +9,11 @@ redirect_from:
 excerpt: listing of all our past workshops
 ---
 
-{% assign first_workshop_date = site.data.swc_past_workshops | group_by: "start_date" | sort: "name" | map: "name" | first %}
+{% assign first_workshop_date = site.data.all_past_workshops | where_exp: "item", "item.tag_name contains 'SWC'" | group_by: "start_date" | sort: "name" | map: "name" | first %}
 
-{% assign n_workshops = site.data.swc_past_workshops | size %}
+{% assign n_workshops = site.data.all_past_workshops | where_exp: "item", "item.tag_name contains 'SWC'" | size %}
 
-{% assign flags = site.data.swc_past_workshops | group_by: "country" | sort: "name" | map: "name"  %}
+{% assign flags = site.data.all_past_workshops | where_exp: "item", "item.tag_name contains 'SWC'" | group_by: "country" | sort: "name" | map: "name"  %}
 
 {% assign n_countries = flags | size %}
 
@@ -42,7 +42,7 @@ excerpt: listing of all our past workshops
 <div class="row">
   <div class="medium-12 columns">
     <h3>Past Workshops</h3>
-    {% assign workshop_list = site.data.swc_past_workshops %}
+    {% assign workshop_list = site.data.all_past_workshops | where_exp: "item", "item.tag_name contains 'SWC'" %}
     {% include workshop_table.md %}
   </div>
 </div><!--end of row-->
