--- a/pages/lessons_dashboard.html
+++ b/pages/lessons_dashboard.html
@@ -7,6 +7,9 @@ redirect_from:
 excerpt: dashboard for lesson status
 ---
 <p>Last rebuilt {{site.data.dashboard.timestamp}}.</p>
+
+Looking for a way to contribute to our lessons? Visit <a href="https://carpentries.org/help-wanted-issues/">the Help Wanted page on The Carpentries website</a> to see a list of issues in need of attention on Software Carpentry, <a href="https://datacarpentry.org/">Data Carpentry</a>, <a href="https://librarycarpentry.org">Library Carpentry</a>, <a href="https://carpentries.org">The Carpentries</a>, <a href="https://carpentries.org/community-lessons">CarpentriesLab</a>, and <a href="https://carpentries.org/community-lessons">Carpentries Incubator</a> repositories.
+
 {% for record in site.data.dashboard.records %}
   <h2>{{record.description}}: <a href="{{record.url}}">{{record.ident}}</a></h2>
   <table class="table table-striped">
