point Help Wanted redirect to https://carpentries.org/help-wanted-issues/

--- a/pages/join_helpwanted.html
+++ b/pages/join_helpwanted.html
@@ -4,8 +4,6 @@ permalink: /join/help/
 title: Help Wanted
 redirect_from:
   - /pages/projects.html
-redirect_to: https://carpentries.org/community/
+redirect_to: https://carpentries.org/help-wanted-issues/
 excerpt: help wanted with projects or tasks
 ---
-
-
