--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,6 +4,16 @@ permalink: /contact/
 title: Contact Us
 excerpt: Contact Software Carpentry by email or through Twitter
 ---
+<html>
+<head>
+<title></title>
+<meta charset="UTF-8">
+<meta name="contact us, get in touch with us," content="HTML">
+<meta name="get in touch with us and get started!" content="Contact Us Page">
+<meta http-equiv="refresh" content="30">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
 <div align="center">
   <img src="{{site.filesurl}}/seascape.jpg" alt="seascape" class="img-thumbnail" />
 </div>
@@ -22,3 +32,4 @@ excerpt: Contact Software Carpentry by email or through Twitter
   <br/>
   Oakland, CA 94607
 </p>
+</body>
