--- a/pages/index.html
+++ b/pages/index.html
@@ -3,7 +3,15 @@ layout: page-fullwidth
 permalink: /index.html
 excerpt: Teaching researchers the foundational computing skills they need to get more done in less time
 ---
-
+html>
+<head>
+<title>Find A Workshop</title>
+<meta charset="UTF-8">
+<meta name="find a workshop, library carpentery, software carpentery" content="HTML">
+<meta http-equiv="refresh" content="30">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
 <div class="row">
   <div class="medium-4 columns">
     <a href="{{site.baseurl}}/workshops/"><img src="{{site.filesurl}}/workshops/2012-12-uta.png" alt="University of Texas 2012" /></a>
@@ -59,3 +67,5 @@ excerpt: Teaching researchers the foundational computing skills they need to get
     {% include list-posts entries='10' %}
   </div>
 </div>
+</body>
+</html>
