fix link for workshop request

--- a/pages/workshops_request.html
+++ b/pages/workshops_request.html
@@ -11,7 +11,7 @@ excerpt: how to request a Software Carpentry workshop at your institution
 </p>
 
 <div align="center">
-<a href="https://amy.carpentries.org/workshops/swc/request/">
+<a href="https://amy.carpentries.org/forms/request_workshop/">
   <button class="btn">
     Request a Software Carpentry workshop
   </button>
@@ -20,8 +20,7 @@ excerpt: how to request a Software Carpentry workshop at your institution
 </div>
 
 <p>
-  You can also request a <a href="http://www.datacarpentry.org/workshops-host/">Data Carpentry</a> or <a href="https://librarycarpentry.org/workshops/">Library Carpentry</a> workshop.  
-  
+  You can also request there a Data Carpentry or a Library Carpentry workshop.
 </p>
   
 <h3>Expenses and Fees</h3>
