add hover text for git lesson row

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -72,10 +72,10 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 
   <tr id="git">
     <td>Version Control with Git</td>
-    <td><a href="{{site.github_io_url}}/git-novice" target="_blank" class="icon-browser" title="Version Control with Git"></a></td>
-    <td><a href="{{site.github_url}}/git-novice" target="_blank" class="icon-github" title="Version Control with Git"></a></td>
-    <td><a href="{{site.github_io_url}}/git-novice/reference" target="_blank" class="icon-eye" title="Version Control with Git"></a></td>
-    <td><a href="{{site.github_io_url}}/git-novice/guide/" target="_bank" class="icon-circle-with-plus" title="The Git Instructor Notes"></a></td>
+    <td><a href="{{site.github_io_url}}/git-novice" target="_blank" class="icon-browser" title="Version Control with Git Main Site"></a></td>
+    <td><a href="{{site.github_url}}/git-novice" target="_blank" class="icon-github" title="Version Control with Git GitHub Repo"></a></td>
+    <td><a href="{{site.github_io_url}}/git-novice/reference" target="_blank" class="icon-eye" title="Version Control with Git Refernce Guide"></a></td>
+    <td><a href="{{site.github_io_url}}/git-novice/guide/" target="_bank" class="icon-circle-with-plus" title="Version Control with Git Instructor Notes"></a></td>
     <td>
       <a href="https://carpentries.org/maintainers/#iglpdc">Ivan Gonzalez</a>,
       Daisie Huang,
