add hover text for prog-py lesson row

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -87,10 +87,10 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 
   <tr id="python">
     <td>Programming with Python</td>
-    <td><a href="{{site.github_io_url}}/python-novice-inflammation" target="_blank" class="icon-browser" title="Programming with Python"></a></td>
-    <td><a href="{{site.github_url}}/python-novice-inflammation" target="_blank" class="icon-github" title="Programming with Python"></a></td>
-    <td><a href="{{site.github_io_url}}/python-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with Python"></a></td>
-    <td><a href="{{site.github_io_url}}/python-novice-inflammation/guide/" target="_bank" class="icon-circle-with-plus" title="The Python Inflammation Instructor Notes"></a></td>
+    <td><a href="{{site.github_io_url}}/python-novice-inflammation" target="_blank" class="icon-browser" title="Programming with Python Main Site"></a></td>
+    <td><a href="{{site.github_url}}/python-novice-inflammation" target="_blank" class="icon-github" title="Programming with Python GitHub Repo"></a></td>
+    <td><a href="{{site.github_io_url}}/python-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with Python Reference Guide"></a></td>
+    <td><a href="{{site.github_io_url}}/python-novice-inflammation/guide/" target="_bank" class="icon-circle-with-plus" title="Programming with Python Instructor Notes"></a></td>
     <td>
       Trevor Bekolay,
       Valentina Staneva,
