--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -101,10 +101,10 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 
   <tr id="python-gap">
       <td>Plotting and Programming in Python</td>
-      <td><a href="{{site.github_io_url}}/python-novice-gapminder" target="_blank" class="icon-browser" title="Plotting and Programming in Python"></a></td>
-      <td><a href="{{site.github_url}}/python-novice-gapminder" target="_blank" class="icon-github" title="Plotting and Programming in Python"></a></td>
-      <td><a href="{{site.github_io_url}}/python-novice-gapminder/reference" target="_blank" class="icon-eye" title="Plotting and Programming in Python"></a></td>
-      <td><a href="{{site.github_io_url}}/python-novice-gapminder/guide/" target="_bank" class="icon-circle-with-plus" title="The Python Gapminder Instructor Notes"></a></td>
+      <td><a href="{{site.github_io_url}}/python-novice-gapminder" target="_blank" class="icon-browser" title="Plotting and Programming in Python Main Site"></a></td>
+      <td><a href="{{site.github_url}}/python-novice-gapminder" target="_blank" class="icon-github" title="Plotting and Programming in Python GitHub Repo"></a></td>
+      <td><a href="{{site.github_io_url}}/python-novice-gapminder/reference" target="_blank" class="icon-eye" title="Plotting and Programming in Python Reference Guide"></a></td>
+      <td><a href="{{site.github_io_url}}/python-novice-gapminder/guide/" target="_bank" class="icon-circle-with-plus" title="Plotting and Programming Instructor Notes"></a></td>
       <td>
           Nathan Moore,
           <a href="https://carpentries.org/maintainers/#alee">Allen Lee</a>,
