add hover text for r-prog lesson row

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -115,10 +115,10 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
 
   <tr id="r-prog">
     <td>Programming with R</td>
-    <td><a href="{{site.github_io_url}}/r-novice-inflammation" target="_blank" class="icon-browser" title="Programming with R"></a></td>
-    <td><a href="{{site.github_url}}/r-novice-inflammation" target="_blank" class="icon-github" title="Programming with R"></a></td>
-    <td><a href="{{site.github_io_url}}/r-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with R"></a></td>
-    <td><a href="{{site.github_io_url}}/r-novice-inflammation/guide/" target="_bank" class="icon-circle-with-plus" title="The R Infammation Instructor Notes"></a></td>
+    <td><a href="{{site.github_io_url}}/r-novice-inflammation" target="_blank" class="icon-browser" title="Programming with R Main Site"></a></td>
+    <td><a href="{{site.github_url}}/r-novice-inflammation" target="_blank" class="icon-github" title="Programming with R GitHub Repo"></a></td>
+    <td><a href="{{site.github_io_url}}/r-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with R Reference Guide"></a></td>
+    <td><a href="{{site.github_io_url}}/r-novice-inflammation/guide/" target="_bank" class="icon-circle-with-plus" title="Programming with R Instructor Notes"></a></td>
     <td>
       <a href="https://carpentries.org/maintainers/#katrinleinweber">Katrin Leinweber</a>, 
       <a href="https://carpentries.org/maintainers/#diyadas">Diya Das</a>,
